// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. Render a single author 1`] = `
<div>
  <div
    dir="auto"
  >
    Alexandra Frean
  </div>
</div>
`;

exports[`2. Render a given section colour 1`] = `
<div>
  <div
    dir="auto"
    style={
      Object {
        "color": "blue",
      }
    }
  >
    Alexandra Frean
  </div>
</div>
`;

exports[`3. Render an inline element 1`] = `
<div>
  <div
    dir="auto"
  >
    Lindsay McIntosh Scottish Political Editor
  </div>
</div>
`;

exports[`4. Render an author first 1`] = `
<div>
  <div
    dir="auto"
  >
    Camilla Long
  </div>
  <div
    dir="auto"
  >
    , Environment Editor
  </div>
</div>
`;

exports[`5. Render an author last 1`] = `
<div>
  <div
    dir="auto"
  >
    RBS Six Nations 
  </div>
  <div
    dir="auto"
  >
    Mike Atherton
  </div>
</div>
`;

exports[`6. Render multiple authors separated by commas 1`] = `
<div>
  <div
    dir="auto"
  >
    Camilla Long
  </div>
  <div
    dir="auto"
  >
    , 
  </div>
  <div
    dir="auto"
  >
    Mike Atherton
  </div>
  <div
    dir="auto"
  >
    , 
  </div>
  <div
    dir="auto"
  >
    Alexandra Frean
  </div>
</div>
`;

exports[`7. Render multiple authors separated by spaces 1`] = `
<div>
  <div
    dir="auto"
  >
    Camilla Long
  </div>
  <div
    dir="auto"
  >
     
  </div>
  <div
    dir="auto"
  >
    Mike Atherton
  </div>
  <div
    dir="auto"
  >
     
  </div>
  <div
    dir="auto"
  >
    Alexandra Frean
  </div>
</div>
`;

exports[`8. Render null when AST is empty 1`] = `null`;

exports[`9. Render an author with given styles 1`] = `
<div>
  <div
    dir="auto"
    style={
      Object {
        "color": "red",
        "textDecoration": "underline",
      }
    }
  >
    Alexandra Frean
  </div>
</div>
`;
